--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
+    "leaflet-arrowheads": "^1.4.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
