--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/KentrikiPyli/compose.traffic-light-controller.kentriki-pyli501.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/KentrikiPyli/compose.traffic-light-controller.kentriki-pyli501.yaml
@@ -7,6 +7,9 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
+      SERVICE_LAYER: Traffic
+      SERVICE_LEVEL: Edge
+      SERVICE_NAME: Traffic Light Controller
 
       # Intersection Details
       Intersection__Id: 5
